--- a/plugins/Visar/Visar.ui
+++ b/plugins/Visar/Visar.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>745</width>
-    <height>572</height>
+    <width>801</width>
+    <height>546</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -145,7 +145,7 @@
        <attribute name="title">
         <string>Temperature</string>
        </attribute>
-       <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0,0,1">
+       <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0,0,1" columnstretch="1,1,1,0">
         <property name="leftMargin">
          <number>4</number>
         </property>
@@ -388,6 +388,16 @@
           <property name="mouseTracking">
            <bool>true</bool>
           </property>
+          <widget class="QWidget" name="widget_2" native="true">
+           <property name="geometry">
+            <rect>
+             <x>280</x>
+             <y>80</y>
+             <width>120</width>
+             <height>80</height>
+            </rect>
+           </property>
+          </widget>
          </widget>
         </item>
         <item row="0" column="3">
@@ -575,7 +585,7 @@
           <property name="title">
            <string>Reference and Shot</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout_4" columnstretch="0,1,1">
+          <layout class="QGridLayout" name="gridLayout_4" columnstretch="0,1,1,0">
            <property name="leftMargin">
             <number>0</number>
            </property>
@@ -588,6 +598,142 @@
            <property name="bottomMargin">
             <number>0</number>
            </property>
+           <item row="0" column="2">
+            <widget class="QComboBox" name="sopShot">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="toolTip">
+              <string>SOP shot image</string>
+             </property>
+             <property name="neutrinoImage" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QComboBox" name="sopRef">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="toolTip">
+              <string>SOP reference image (maybe the same as the shot)</string>
+             </property>
+             <property name="neutrinoImage" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1" colspan="2">
+            <widget class="QWidget" name="widget" native="true">
+             <layout class="QHBoxLayout" name="horizontalLayout_2">
+              <property name="leftMargin">
+               <number>0</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>0</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
+              <item>
+               <widget class="QWidget" name="widget_6" native="true">
+                <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="1,0">
+                 <property name="leftMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="topMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="rightMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="bottomMargin">
+                  <number>0</number>
+                 </property>
+                 <item>
+                  <widget class="QLineEdit" name="globDirRef">
+                   <property name="toolTip">
+                    <string>Directory containing all the references</string>
+                   </property>
+                   <property name="placeholderText">
+                    <string>Reference image directory</string>
+                   </property>
+                   <property name="neutrinoSave" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QLineEdit" name="globRef">
+                   <property name="toolTip">
+                    <string>RegEx match filename:  use (\d+) to replace a shot number. e.g. visar1_(\d+)_ref.img</string>
+                   </property>
+                   <property name="placeholderText">
+                    <string>Reference pattern</string>
+                   </property>
+                   <property name="neutrinoSave" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </widget>
+              </item>
+              <item>
+               <widget class="QWidget" name="widget_7" native="true">
+                <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="1,0">
+                 <property name="leftMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="topMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="rightMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="bottomMargin">
+                  <number>0</number>
+                 </property>
+                 <item>
+                  <widget class="QLineEdit" name="globDirShot">
+                   <property name="toolTip">
+                    <string>Directory containing all the shots</string>
+                   </property>
+                   <property name="placeholderText">
+                    <string>Shot image directory</string>
+                   </property>
+                   <property name="neutrinoSave" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QLineEdit" name="globShot">
+                   <property name="toolTip">
+                    <string>RegEx match filename:  use (\d+) to replace a shot number. e.g. visar1_(\d+)_ref.img</string>
+                   </property>
+                   <property name="placeholderText">
+                    <string>Shot pattern</string>
+                   </property>
+                   <property name="neutrinoSave" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
            <item row="0" column="0">
             <widget class="QCheckBox" name="enableSOP">
              <property name="font">
@@ -609,123 +755,18 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
-            <widget class="QComboBox" name="sopRef">
-             <property name="font">
-              <font>
-               <pointsize>10</pointsize>
-              </font>
-             </property>
+           <item row="1" column="3">
+            <widget class="QToolButton" name="globRefresh">
              <property name="toolTip">
-              <string>SOP reference image (maybe the same as the shot)</string>
+              <string>Guess Dir, Ref and Shot from current images</string>
              </property>
-             <property name="neutrinoImage" stdset="0">
-              <bool>true</bool>
+             <property name="text">
+              <string>...</string>
              </property>
-            </widget>
-           </item>
-           <item row="0" column="2">
-            <widget class="QComboBox" name="sopShot">
-             <property name="font">
-              <font>
-               <pointsize>10</pointsize>
-              </font>
+             <property name="icon">
+              <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+               <normaloff>:/icons/autoRefresh.png</normaloff>:/icons/autoRefresh.png</iconset>
              </property>
-             <property name="toolTip">
-              <string>SOP shot image</string>
-             </property>
-             <property name="neutrinoImage" stdset="0">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0" colspan="3">
-            <widget class="QWidget" name="widget_5" native="true">
-             <property name="font">
-              <font>
-               <pointsize>9</pointsize>
-              </font>
-             </property>
-             <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,1,0,0,0,0,0">
-              <property name="leftMargin">
-               <number>0</number>
-              </property>
-              <property name="topMargin">
-               <number>0</number>
-              </property>
-              <property name="rightMargin">
-               <number>0</number>
-              </property>
-              <property name="bottomMargin">
-               <number>0</number>
-              </property>
-              <item>
-               <widget class="QToolButton" name="globDirButton">
-                <property name="text">
-                 <string>...</string>
-                </property>
-                <property name="icon">
-                 <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-                  <normaloff>:/icons/dir.png</normaloff>:/icons/dir.png</iconset>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLineEdit" name="globDir">
-                <property name="toolTip">
-                 <string>Directory containing all the shots</string>
-                </property>
-                <property name="neutrinoSave" stdset="0">
-                 <bool>true</bool>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLabel" name="label_3">
-                <property name="text">
-                 <string>Ref:</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLineEdit" name="globRef">
-                <property name="toolTip">
-                 <string>RegEx match filename:  use (\d+) to replace a shot number. e.g. visar1_(\d+)_ref.img</string>
-                </property>
-                <property name="neutrinoSave" stdset="0">
-                 <bool>true</bool>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLabel" name="label_4">
-                <property name="text">
-                 <string>Shot:</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLineEdit" name="globShot">
-                <property name="toolTip">
-                 <string>RegEx match filename:  use (\d+) to replace a shot number. e.g. visar1_(\d+)_ref.img</string>
-                </property>
-                <property name="neutrinoSave" stdset="0">
-                 <bool>true</bool>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QToolButton" name="globRefresh">
-                <property name="text">
-                 <string>...</string>
-                </property>
-                <property name="icon">
-                 <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-                  <normaloff>:/icons/autoRefresh.png</normaloff>:/icons/autoRefresh.png</iconset>
-                </property>
-               </widget>
-              </item>
-             </layout>
             </widget>
            </item>
           </layout>
@@ -1070,11 +1111,6 @@
   <tabstop>sopRef</tabstop>
   <tabstop>sopShot</tabstop>
   <tabstop>sopOffset</tabstop>
-  <tabstop>globDirButton</tabstop>
-  <tabstop>globDir</tabstop>
-  <tabstop>globRef</tabstop>
-  <tabstop>globShot</tabstop>
-  <tabstop>globRefresh</tabstop>
   <tabstop>sopCalibT0</tabstop>
   <tabstop>sopCalibA</tabstop>
   <tabstop>whichRefl</tabstop>
