[Math] add crop

--- a/plugins/Math_operations/Math_operations.ui
+++ b/plugins/Math_operations/Math_operations.ui
@@ -244,6 +244,11 @@
          </item>
          <item>
           <property name="text">
+           <string>Crop (WxH+X+Y)</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
            <string>---------------------</string>
           </property>
          </item>
