--- a/plugins/Rotate/Rotate.ui
+++ b/plugins/Rotate/Rotate.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>198</width>
-    <height>169</height>
+    <width>208</width>
+    <height>186</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,7 +36,34 @@
     <property name="bottomMargin">
      <number>4</number>
     </property>
-    <item row="4" column="0">
+    <item row="6" column="1">
+     <widget class="QPushButton" name="doIt">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Keep a copy</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="0">
+     <widget class="QCheckBox" name="sameSize">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>same size</string>
+      </property>
+      <property name="neutrinoSave" stdset="0">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0" colspan="2">
      <widget class="QGroupBox" name="groupBox_2">
       <property name="font">
        <font>
@@ -121,7 +148,7 @@
       </layout>
      </widget>
     </item>
-    <item row="3" column="0">
+    <item row="3" column="0" colspan="2">
      <widget class="QComboBox" name="image">
       <property name="font">
        <font>
@@ -130,18 +157,6 @@
       </property>
       <property name="neutrinoImage" stdset="0">
        <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="0">
-     <widget class="QPushButton" name="doIt">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Keep a copy</string>
       </property>
      </widget>
     </item>
