--- a/UIs/nLine.ui
+++ b/UIs/nLine.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>317</width>
-    <height>229</height>
+    <width>342</width>
+    <height>294</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -303,17 +303,17 @@
         <property name="spacing">
          <number>2</number>
         </property>
-        <item row="2" column="0">
-         <widget class="QToolButton" name="removeRow">
+        <item row="3" column="0">
+         <widget class="QToolButton" name="copyPoints">
           <property name="toolTip">
-           <string>Remove point</string>
+           <string>Copy points to Clipboard</string>
           </property>
           <property name="text">
            <string>...</string>
           </property>
           <property name="icon">
            <iconset>
-            <normaloff>:icons//remove.png</normaloff>:icons//remove.png</iconset>
+            <normaloff>:icons//saveClipboard.png</normaloff>:icons//saveClipboard.png</iconset>
           </property>
           <property name="iconSize">
            <size>
@@ -323,7 +323,7 @@
           </property>
          </widget>
         </item>
-        <item row="5" column="0">
+        <item row="6" column="0">
          <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -336,27 +336,7 @@
           </property>
          </spacer>
         </item>
-        <item row="1" column="0">
-         <widget class="QToolButton" name="addPoint">
-          <property name="toolTip">
-           <string>Add point</string>
-          </property>
-          <property name="text">
-           <string>...</string>
-          </property>
-          <property name="icon">
-           <iconset>
-            <normaloff>:icons//plus.png</normaloff>:icons//plus.png</iconset>
-          </property>
-          <property name="iconSize">
-           <size>
-            <width>16</width>
-            <height>16</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="2" rowspan="7">
+        <item row="0" column="2" rowspan="8">
          <widget class="QTableWidget" name="points">
           <property name="font">
            <font>
@@ -399,23 +379,51 @@
            <property name="text">
             <string>Y</string>
            </property>
-           <property name="textAlignment">
-            <set>AlignCenter</set>
-           </property>
           </column>
          </widget>
         </item>
-        <item row="3" column="0">
-         <widget class="QToolButton" name="copyPoints">
+        <item row="2" column="0">
+         <widget class="QToolButton" name="removeRow">
           <property name="toolTip">
-           <string>Copy points to Clipboard</string>
+           <string>Remove point</string>
           </property>
           <property name="text">
            <string>...</string>
           </property>
           <property name="icon">
            <iconset>
-            <normaloff>:icons//saveClipboard.png</normaloff>:icons//saveClipboard.png</iconset>
+            <normaloff>:icons//remove.png</normaloff>:icons//remove.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>16</width>
+            <height>16</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="QToolButton" name="savePoints">
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+            <normaloff>:/icons/saveTxt.png</normaloff>:/icons/saveTxt.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QToolButton" name="addPoint">
+          <property name="toolTip">
+           <string>Add point</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>:icons//plus.png</normaloff>:icons//plus.png</iconset>
           </property>
           <property name="iconSize">
            <size>
@@ -426,13 +434,22 @@
          </widget>
         </item>
         <item row="4" column="0">
-         <widget class="QToolButton" name="savePoints">
+         <widget class="QToolButton" name="pastePoints">
+          <property name="toolTip">
+           <string>Paste points from Clipboard</string>
+          </property>
           <property name="text">
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/QtCreator-eMPsXC/qtc-cmake-GRpXqrGJ/src/qrc/icons.qrc">
-            <normaloff>:/icons/saveTxt.png</normaloff>:/icons/saveTxt.png</iconset>
+           <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+            <normaloff>:/icons/paste.png</normaloff>:/icons/paste.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>16</width>
+            <height>16</height>
+           </size>
           </property>
          </widget>
         </item>
@@ -461,7 +478,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/QtCreator-eMPsXC/qtc-cmake-GRpXqrGJ/src/qrc/icons.qrc">
+           <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
             <normaloff>:/icons/saveClipboard.png</normaloff>:/icons/saveClipboard.png</iconset>
           </property>
          </widget>
@@ -475,7 +492,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/QtCreator-eMPsXC/qtc-cmake-GRpXqrGJ/src/qrc/icons.qrc">
+           <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
             <normaloff>:/icons/saveTxt.png</normaloff>:/icons/saveTxt.png</iconset>
           </property>
          </widget>
@@ -486,7 +503,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/QtCreator-eMPsXC/qtc-cmake-GRpXqrGJ/src/qrc/icons.qrc">
+           <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
             <normaloff>:/icons/savePDF.png</normaloff>:/icons/savePDF.png</iconset>
           </property>
          </widget>
@@ -635,7 +652,7 @@
   </action>
   <action name="actionSavePDF">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/QtCreator-eMPsXC/qtc-cmake-GRpXqrGJ/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/savePDF.png</normaloff>:/icons/savePDF.png</iconset>
    </property>
    <property name="text">
@@ -647,7 +664,7 @@
   </action>
   <action name="actionRemove">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/QtCreator-eMPsXC/qtc-cmake-GRpXqrGJ/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/remove.png</normaloff>:/icons/remove.png</iconset>
    </property>
    <property name="text">
@@ -659,7 +676,7 @@
   </action>
   <action name="actionExtract">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/QtCreator-eMPsXC/qtc-cmake-GRpXqrGJ/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/regionExtract.png</normaloff>:/icons/regionExtract.png</iconset>
    </property>
    <property name="text">
@@ -696,7 +713,7 @@
   <tabstop>colorButton</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/QtCreator-eMPsXC/qtc-cmake-GRpXqrGJ/src/qrc/icons.qrc"/>
+  <include location="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
